--- a/GF & DF.html
+++ b/GF & DF.html
@@ -35,12 +35,12 @@
         <h2 id="dairy"> Why to cook Dairy Free or Gluten Free</h2>
         <p>Find out why to cook dairy free or gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against bread and carbs.</p>
-        <ul id ="why"> Dairy Free
-            <li>helps prevents headaches/li>
+        <ul id ="why"> <h3 id="word">Dairy Free</h3>
+            <li>helps prevents headaches</li>
             <li>allows for healthy digestion</li>
             <li>gives a reason to keep other forms of "milk" in business</li>
         </ul>
-        <ul id ="who"> Gluten Free
+        <ul id ="who"> <h3 id="word">Gluten Free</h3>
             <li>allows the stomach to calm easier</li>
             <li>is healthier for some people</li>
             <li>I honestly I don't much why other than allergies</li>
