--- a/FSTD.html
+++ b/FSTD.html
@@ -21,11 +21,11 @@
         <ul id="navlist" class="im">
             <li><a class="current" href="index.html"> Home </a></li>
             <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
-            <li class="active"><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
+            <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
             <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
-            <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
+            <li  class="active"><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
-            <li><a class="current" href="W2G.html"> Where to Go </a></li>
+            <li ><a class="current" href="W2G.html"> Where to Go </a></li>
             <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
