--- a/W2G.html
+++ b/W2G.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/W2G.css" rel="stylesheet">
-    <title>Vegan Recipes</title>
+    <title>Where to go</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Vegan Recipes</h1>
+        <h1>Where to go Recipes</h1>
     </header>
    <!--Navagation-->
    <nav id="navbar" class="navbar">
@@ -32,22 +32,7 @@
     <!--DAIRYFREE PAGE LINK-->
     <main>
         <div class = "wrapper" id = "wrapper">
-        <h2 id="dairy"> Why to cook Vegan</h2>
-        <p>Find out why to cook vegan other than allergies. Before I list <strong> MY </strong> I would like to say I have
-            nothing against eating meat/animal products.</p>
-        <ul id ="why">
-            <li id ="what">Is healthier for some people</li>
-            <li id ="what">helps get enough nutrients but you will need to watch this</li>
-            <li id ="what">allows more energy (especially for those who are allergic)</li>
-            <li id ="what">gives a reason to keep other forms of "milk" in business</li>
-        </ul>
-        <!--Recipes sections-->
-        <h2 class = "Header">Breakfast Recipes</h2>
-        <h2 class = "Header">Lunch Recipes</h2>
-        <h2 class = "Header">Dinner Recipes</h2>
-        <h2 class = "Header">Snack Recipes</h2>
-        <h2 class = "Header">Dessert Recipes</h2>
-        </div>
+       
     </main>
 </body>
 <!--Footer-->
