--- a/FSTD.html
+++ b/FSTD.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/FSTD.css" rel="stylesheet">
-    <title>Gluten Free Recipes</title>
+    <title>Fun Stuff To Do while Cooking</title>
 </head>
 
 <body>
