--- a/GF & DF.html
+++ b/GF & DF.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/GF & DF.css" rel="stylesheet">
-    <title>Gluten Free Recipes</title>
+    <title>Dairy Free and Gluten Free</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Gluten Free Recipes</h1>
+        <h1>Mom's Dairy Free and Gluten Free</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar" class="navbar">
