--- a/W2G.html
+++ b/W2G.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/W2G.css" rel="stylesheet">
-    <title>Where to go</title>
+    <title>Where to Go When You Don't Want to Cook</title>
 </head>
 
 <body>
     <header>
-        <h1>Where to go Recipes</h1>
+        <h1>Where to Go When You Don't Want to Cook</h1>
     </header>
    <!--Navagation-->
    <nav id="navbar" class="navbar">
