--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
     </style>
     <link href="/css files/forms.css" rel="stylesheet">
-    <title>Learning to Cook like Mom</title>
+    <title>Forms</title>
 </head>
 <!--Body-->
 
