--- a/thanks.html
+++ b/thanks.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
     </style>
     <link href="/css files/style.css" rel="stylesheet">
-    <title>Learning to Cook like Mom</title>
+    <title>Thanks</title>
 </head>
 <!--Body-->
 
