Working with google maps

--- a/W2G.html
+++ b/W2G.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-        </style>
+    </style>
     <link href="/css files/W2G.css" rel="stylesheet">
     <title>Where to Go When You Don't Want to Cook</title>
 </head>
@@ -16,27 +16,36 @@
     <header>
         <h1>Where to Go When You Don't Want to Cook</h1>
     </header>
-   <!--Navagation-->
-   <nav id="navbar" class="navbar">
-    <ul id="navlist" class="im">
-        <li><a class="current" href="index.html"> Home </a></li>
-        <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
-        <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
-        <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
-        <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
-        <li><a class="current" href="gallery.html"> Gallery</a></li>
-        <li class="active"><a class="current" href="W2G.html"> Where to Go </a></li>
-        <li><a class="current" href="forms.html"> Forms</a></li>
-    </ul>
-</nav>
+    <!--Navagation-->
+    <nav id="navbar" class="navbar">
+        <ul id="navlist" class="im">
+            <li><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
+            <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
+            <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
+            <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li class="active"><a class="current" href="W2G.html"> Where to Go </a></li>
+            <li><a class="current" href="forms.html"> Forms</a></li>
+        </ul>
+    </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <div class = "wrapper" id = "wrapper">
-       
+        <div>
+            <h2>Kneaders</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48525.28375805566!2d-111.89239267302904!3d40.523243269090216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875280cb6f017101%3A0x5ebb1abd964d3411!2sKneaders%20Bakery%20%26%20Cafe!5e0!3m2!1sen!2sus!4v1585077546031!5m2!1sen!2sus"
+                width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe></script>
+            <h3>This is a good place for Vegetarian eats, Vegan eats, you can even find something dairy free, but if you
+                are gluten free don't go!</h3>
+        </div>
+
     </main>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
+
 </html>
