--- a/W2G.html
+++ b/W2G.html
@@ -31,6 +31,7 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
+        <div class= "class" id= "grid">
         <div>
             <h2>Kneaders</h2>
             <iframe
@@ -40,7 +41,7 @@
             <h3>This is a good place for Vegetarian eats, Vegan eats, you can even find something dairy free, but if you
                 are gluten free don't go!</h3>
         </div>
-
+    </div>
     </main>
 </body>
 <!--Footer-->
