Working to make a css grid

--- a/W2G.html
+++ b/W2G.html
@@ -31,17 +31,28 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <div class= "class" id= "grid">
-        <div>
-            <h2>Kneaders</h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48525.28375805566!2d-111.89239267302904!3d40.523243269090216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875280cb6f017101%3A0x5ebb1abd964d3411!2sKneaders%20Bakery%20%26%20Cafe!5e0!3m2!1sen!2sus!4v1585077546031!5m2!1sen!2sus"
-                width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe></script>
-            <h3>This is a good place for Vegetarian eats, Vegan eats, you can even find something dairy free, but if you
-                are gluten free don't go!</h3>
-        </div>
-    </div>
+        <section class="grid" id="grid">
+            <div id ="project-grid" class ="project-grid">
+                <h2>Kneaders</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48525.28375805566!2d-111.89239267302904!3d40.523243269090216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875280cb6f017101%3A0x5ebb1abd964d3411!2sKneaders%20Bakery%20%26%20Cafe!5e0!3m2!1sen!2sus!4v1585077546031!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe></script>
+                <figcaption>This is a good place for Vegetarian eats, Vegan eats, you can even find something dairy
+                    free, but if you
+                    are gluten free don't go!</figcaption>
+            </div>
+            <div id ="project-grid" class ="project-grid">
+                <h2> McDonalds</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24352.531270069343!2d-111.73026246044921!3d40.274274999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9ae2b3fd9d0b%3A0x6b398dfcc3f873a3!2sMcDonald&#39;s!5e0!3m2!1sen!2sus!4v1585078263561!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <figcaption>Ok let's be honest, this is where we go for cheap food and honestly you can get Vegetarian
+                    eats, Gluten free eats, and even dairy free eats. I am Vegetarian and I usually get 2 cheeseburger
+                    meal with no meat. They do it but you might get some weird looks.</figcaption>
+            </div>
+        </section>
     </main>
 </body>
 <!--Footer-->
