--- a/Reg.html
+++ b/Reg.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/Reg.css" rel="stylesheet">
-    <title>Normal Recipes</title>
+    <title>Regular Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Normal Recipes</h1>
+        <h1>Mom's Regular Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar" class="navbar">
