--- a/W2G.html
+++ b/W2G.html
@@ -29,7 +29,7 @@
             <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
-    <!--DAIRYFREE PAGE LINK-->
+    <!-- PAGE LINK-->
     <main>
         <section class="grid" id="grid">
             <div id ="project-grid" class ="project-grid">
