--- a/W2G.html
+++ b/W2G.html
@@ -32,7 +32,25 @@
     <!-- PAGE LINK-->
     <main>
         <section class="grid" id="grid">
-            <div id ="project-grid" class ="project-grid">
+            <div id="project-grid" class="project-grid">
+                <h2>Home base 1</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3043.8642038403486!2d-111.71756795006374!3d40.27876667184324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9b1eeeb9f5c5%3A0x63523d8413e98aa1!2sUtah%20Valley%20University!5e0!3m2!1sen!2sus!4v1585153355857!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <figcaption>So this is where the home base for where I will be having it down in Orem because I honestly
+                    send a lot of time down there and this is the UVU Campus.</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
+                <h2>Home base 2</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.012470911779!2d-111.9029191500521!3d40.56340185453043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287cc6f996a61%3A0xf4b81b60e07d83b7!2sSouth%20Jordan%20Station!5e0!3m2!1sen!2sus!4v1585153475781!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <figcaption>So I also spend a lot of time traveling up to Salt Lake so this is about the half way point
+                    there where I usually get off so the other resturants I know are here</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
                 <h2>Kneaders</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48525.28375805566!2d-111.89239267302904!3d40.523243269090216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875280cb6f017101%3A0x5ebb1abd964d3411!2sKneaders%20Bakery%20%26%20Cafe!5e0!3m2!1sen!2sus!4v1585077546031!5m2!1sen!2sus"
@@ -42,7 +60,7 @@
                     free, but if you
                     are gluten free don't go!</figcaption>
             </div>
-            <div id ="project-grid" class ="project-grid">
+            <div id="project-grid" class="project-grid">
                 <h2> McDonalds</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24352.531270069343!2d-111.73026246044921!3d40.274274999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9ae2b3fd9d0b%3A0x6b398dfcc3f873a3!2sMcDonald&#39;s!5e0!3m2!1sen!2sus!4v1585078263561!5m2!1sen!2sus"
