Playing with the grid and yes it works

--- a/W2G.html
+++ b/W2G.html
@@ -44,7 +44,7 @@
             <div id="project-grid" class="project-grid">
                 <h2>Home base 2</h2>
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.012470911779!2d-111.9029191500521!3d40.56340185453043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287cc6f996a61%3A0xf4b81b60e07d83b7!2sSouth%20Jordan%20Station!5e0!3m2!1sen!2sus!4v1585153475781!5m2!1sen!2sus"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48496.93997393358!2d-111.90220138860808!3d40.56237988706059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287cc6f996a61%3A0xf4b81b60e07d83b7!2sSouth%20Jordan%20Station!5e0!3m2!1sen!2sus!4v1585156298990!5m2!1sen!2sus"
                     width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
                 <figcaption>So I also spend a lot of time traveling up to Salt Lake so this is about the half way point
@@ -69,6 +69,27 @@
                 <figcaption>Ok let's be honest, this is where we go for cheap food and honestly you can get Vegetarian
                     eats, Gluten free eats, and even dairy free eats. I am Vegetarian and I usually get 2 cheeseburger
                     meal with no meat. They do it but you might get some weird looks.</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
+                <h2> Zupas</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.55440611032!2d-111.8913016496612!3d40.5293390792508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287112eb7ef65%3A0x962c49371a9b118f!2sCaf%C3%A9%20Zupas!5e0!3m2!1sen!2sus!4v1585156352919!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <figcaption>This is a cute little cafe with great choices for any food limitations because they will put
+                    in or leave out whatever you ask. I really like their veggie sandwich but I usually leave off the
+                    tomatoes.</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
+                <h2> Applebees</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.0800493932293!2d-111.7043420496715!3d40.273971979280866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9afa839085e5%3A0x9f1e7317c9d8e5a9!2sApplebee&#39;s%20Grill%20%2B%20Bar!5e0!3m2!1sen!2sus!4v1585156477275!5m2!1sen!2sus"
+                    width="300" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <figcaption> I really enjoy this place. I have gone with several friends all with different food
+                    limitations and we can all get something. If you ask they will give you a corn tortilla and they are
+                    good to work with you. But I have a friend who calls this crapplebees but honestly they call it that
+                    because they don't like their food. I do admit that the food changes taste on which one you visit.</figcaption>
             </div>
         </section>
     </main>
