--- a/FSTD.html
+++ b/FSTD.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-        </style>
+    </style>
     <link href="/css files/FSTD.css" rel="stylesheet">
     <title>Fun Stuff To Do while Cooking</title>
 </head>
@@ -23,19 +23,28 @@
             <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
             <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
             <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
-            <li  class="active"><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
+            <li class="active"><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
-            <li ><a class="current" href="W2G.html"> Where to Go </a></li>
+            <li><a class="current" href="W2G.html"> Where to Go </a></li>
             <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
     <main>
-        <div class = "wrapper" id = "wrapper"></div>
+        <div id="project-grid" class="project-grid">
+            <h2>What I am doing while I pretend to cook</h2>
+            <iframe width="300" height="250" src="https://www.youtube.com/embed/nXpB1rixnPQ" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <figcaption>While I am trying to cook I actually start dancing and listening to Disney music with my little
+                siblings. Sometimes we accidently burn what we are cooking because we getside tracked singing and
+                dancing.</figcaption>
+        </div>
     </main>
-</div>
+    </div>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
+
 </html>
