--- a/FSTD.html
+++ b/FSTD.html
@@ -30,17 +30,32 @@
         </ul>
     </nav>
     <main>
-        <div id="project-grid" class="project-grid">
-            <h2>What I am doing while I pretend to cook</h2>
-            <iframe width="300" height="250" src="https://www.youtube.com/embed/nXpB1rixnPQ" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <figcaption>While I am trying to cook I actually start dancing and listening to Disney music with my little
-                siblings. Sometimes we accidently burn what we are cooking because we getside tracked singing and
-                dancing.</figcaption>
-        </div>
+        <h1>What I am doing while I pretend to cook</h1>
+        <h2>Some songs we dance and sing to</h2>
+        <section class="grid" id="grid">
+            <div id="project-grid" class="project-grid">
+                <iframe width="300" height="250" src="https://www.youtube.com/embed/nXpB1rixnPQ" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <figcaption>While I am trying to cook I actually start dancing and listening to Disney music with my
+                    little
+                    siblings. Sometimes we accidently burn what we are cooking because we getside tracked singing and
+                    dancing.</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
+                <iframe width="300" height="250" src="https://www.youtube.com/embed/TVcLIfSC4OE" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <figcaption>This is our favorite Mulan song to sing and dance to</figcaption>
+            </div>
+            <div id="project-grid" class="project-grid">
+                <iframe width="300" height="250" src="https://www.youtube.com/embed/FqDaoMtIujs" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <figcaption>This is one of my younger siblings favorite to dance to</figcaption>
+            </div>
+        </section>
     </main>
-    </div>
 </body>
 <!--Footer-->
 <footer>
