--- a/FSTD.html
+++ b/FSTD.html
@@ -55,6 +55,28 @@
                 <figcaption>This is one of my younger siblings favorite to dance to</figcaption>
             </div>
         </section>
+        <section>
+            <h1>Here is a table of tv shows we turn on while cooking</h1>
+            <table style="width:100%">
+                <tr>
+                  <th id="one">Shows name</th>
+                  <th id="two">When</th>
+                  
+                </tr>
+                <tr>
+                  <td>NCIS</td>
+                  <td>When I know what we are cooking and could do it by myself</td>
+                </tr>
+                <tr>
+                    <td>Great British Master Class</td>
+                    <td>When I actually am following them and cooking with them </td>
+                  </tr>
+                  <tr>
+                    <td>NCIS</td>
+                    <td>When I know what we are cooking and could do it by myself</td>
+                  </tr>
+              </table>
+        </section>
     </main>
 </body>
 <!--Footer-->
