--- a/FSTD.html
+++ b/FSTD.html
@@ -56,12 +56,19 @@
             </div>
         </section>
         <section>
+            <h1>Some of our favorite songs that we turn on by Pandora</h1>
+            <audio controls>
+                <source src="audio/The Window.ogg" type="audio/ogg">
+                <source src="audio/The Window.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+              </audio>
+        </section>
+        <section>
             <h1>Here is a table of tv shows we turn on while cooking</h1>
             <table style="width:100%">
                 <tr>
                   <th id="one">Shows name</th>
                   <th id="two">When</th>
-                  
                 </tr>
                 <tr>
                   <td>NCIS</td>
@@ -72,8 +79,12 @@
                     <td>When I actually am following them and cooking with them </td>
                   </tr>
                   <tr>
-                    <td>NCIS</td>
-                    <td>When I know what we are cooking and could do it by myself</td>
+                    <td>Greath British Baking Championship</td>
+                    <td>When I know there is a long cooking time and I can wait while it is cooking</td>
+                  </tr>
+                  <tr>
+                    <td>HGTV</td>
+                    <td>While I am working I can go and wait until the end to watch</td>
                   </tr>
               </table>
         </section>
