Working with audio

--- a/FSTD.html
+++ b/FSTD.html
@@ -60,7 +60,10 @@
             <audio controls>
                 <source src="audio/The Window.ogg" type="audio/ogg">
                 <source src="audio/The Window.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
+              </audio>
+              <audio controls>
+                <source src="audio/KingofNY.ogg" type="audio/ogg">
+                <source src="audio/KingofNY.mp3" type="audio/mp3">
               </audio>
         </section>
         <section>
