--- a/FSTD.html
+++ b/FSTD.html
@@ -57,10 +57,12 @@
         </section>
         <section>
             <h1>Some of our favorite songs that we turn on by Pandora</h1>
+            <h4>The Window by Trout Fishing in America</h4>
             <audio controls>
                 <source src="audio/The Window.ogg" type="audio/ogg">
                 <source src="audio/The Window.mp3" type="audio/mp3">
               </audio>
+              <h4>King of New York from Newies</h4>
               <audio controls>
                 <source src="audio/KingofNY.ogg" type="audio/ogg">
                 <source src="audio/KingofNY.mp3" type="audio/mp3">
