--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     linking
                     where we found the original recipe.</dt>
                 <dd> You can reach the original recipes by clicking on the title on the recipe</dd>
+                <dd><a href="/images/Cooking Like Mom.pdf">Here is a PDF of who we are and what we are doing</a></dd>
             </dl>
             <p><strong>From our kitchen to yours,</strong></p>
             <p><em>Anne and Mariah</em><br>
