Finishing table and stuff

--- a/FSTD.html
+++ b/FSTD.html
@@ -91,6 +91,18 @@
                     <td>HGTV</td>
                     <td>While I am working I can go and wait until the end to watch</td>
                   </tr>
+                  <tr>
+                    <td>Lego Masters</td>
+                    <td>This is one where I watch to see the end so I start it before I start cooking and watch the end when it is done</td>
+                  </tr>
+                  <tr>
+                    <td>Food Network</td>
+                    <td>When I am hungry and waiting for the food to cook</td>
+                  </tr>
+                  <tr>
+                    <td>Disney Show</td>
+                    <td>When I need a bright fun sing a long while I am cooking</td>
+                  </tr>
               </table>
         </section>
     </main>
